# ORE

./: .gitignore  CMakeLists.txt  Makefile  grub.cfg  linker.ld
source/libDraco/: Base.h  CMakeLists.txt  Loader.cpp  Loader.h
source/libDraco/Scanner/: CMakeLists.txt  Scanner.cpp  Scanner.h
source/libDraco/Test/: CMakeLists.txt  LoadTest.cpp
source/libMarx/: CMakeLists.txt  Engine.cpp  Engine.h  Native.cpp  Native.h  OperationCodes.h
source/libMarx/Test/: CMakeLists.txt
source/libReflector/: Base.h  CMakeLists.txt  Reflector.cpp  Reflector.h
source/libReflector/Extension/: Array.cpp  Array.h  Class.cpp  Class.h
source/libReflector/Test/: ArrayTest.cpp  CMakeLists.txt  ClassTest.cpp  allocTest.cpp  getTest.cpp  packedAllocTest.cpp  packedGetTest.cpp
source/libc/: CMakeLists.txt  assert.cpp  assert.hpp  math.cpp  math.hpp  stdio.cpp  stdio.hpp  stdlib.cpp  stdlib.hpp  string.cpp  string.hpp
source/libk/: CMakeLists.txt  Display.cpp  Display.hpp  Memory.cpp  Memory.hpp  Multiboot.cpp  Multiboot.hpp  UUID.cpp  UUID.h  boot.s  main.cpp  stdlib.hpp
source/libu/: CharacterULIB.hpp  DisplayULIB.hpp  ObjectULIB.hpp  PackedULIB.hpp  StringULIB.hpp  SystemULIB.hpp
