cmake_minimum_required(VERSION 3.25)
project(Reflection)

set(CMAKE_CXX_STANDARD 17)

#add_executable(AllocTest allocTest.cpp)
#add_executable(PackedAllocTest packedAllocTest.cpp)
#add_executable(GetTest getTest.cpp)
#add_executable(PackedGetTest packedGetTest.cpp)
#add_executable(ArrayTest ArrayTest.cpp)
#add_executable(ClassTest ClassTest.cpp)
